<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/clinicFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_clinic" />
        <item
            android:id="@+id/appointmentFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/appointments" />

        <item
            android:id="@+id/reportFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_report" />
    </group>
</menu>