<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="100dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="100dp"
    android:textAlignment="center"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    app:flow_verticalAlign="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
            app:layout_constraintStart_toEndOf="@+id/imgProfile"
            app:layout_constraintTop_toTopOf="@+id/imgProfile">

            <TextView
                android:id="@+id/lblFullName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblClinic"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/nav_header_subtitle"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>