<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddPatientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="0dp"
            android:layout_height="204dp"
            android:layout_marginTop="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_wave"
            android:contentDescription="@string/todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/bgPrimary"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="87dp"
                android:layout_height="146dp"
                android:src="@drawable/userimg_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/patient_photo" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/upload_photo"
                android:textColor="@color/white"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_baseline_image_24"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11"
                app:strokeColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="685dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:paddingBottom="300dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/first_name"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etPFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView8"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/middle_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPFirstName" />

                    <EditText
                        android:id="@+id/etPMiddleName"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                    <TextView
                        android:id="@+id/textView9"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/last_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPMiddleName" />

                    <EditText
                        android:id="@+id/etPLastName"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                    <TextView
                        android:id="@+id/textView22"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/sex"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPLastName" />

                    <RadioGroup
                        android:id="@+id/rgPSex"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView22">

                        <RadioButton
                            android:id="@+id/rPMale"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/rPFemale"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/female" />
                    </RadioGroup>

                    <EditText
                        android:id="@+id/etPEmail"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView35" />

                    <TextView
                        android:id="@+id/textView35"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rgPSex" />

                    <EditText
                        android:id="@+id/etPContactNo"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/montserrat"
                        android:inputType="phone"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView36" />

                    <TextView
                        android:id="@+id/textView36"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/contact_no"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPEmail" />

                    <EditText
                        android:id="@+id/etPAddress"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/montserrat"
                        android:inputType="text"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView37" />

                    <TextView
                        android:id="@+id/textView37"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/address"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPContactNo" />

                    <TextView
                        android:id="@+id/textView38"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/birthdate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPAddress" />

                    <EditText
                        android:id="@+id/etPBirthDate"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"

                        android:fontFamily="@font/montserrat"
                        android:inputType="none"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView38"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/etPNotes"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/montserrat"
                        android:inputType="text"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView39" />

                    <TextView
                        android:id="@+id/textView39"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/notes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPBirthDate" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/clParent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnSave"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/bgPrimary"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

